# LiberTEM

./: .buildinfo  .codeclimate.yml  .dockerignore  .editorconfig  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .mailmap  .mypy-checked  .pre-commit-config.yaml  .travis.yml  .zenodo.json  LICENSE  MANIFEST.in  README.rst  Untitled1.ipynb  acknowledgments.html  api.html  applications.html  apply_disk_mask_DE16_20-04-30_scan_64-64_8fps.seq (1).ipynb  apply_disk_mask_DE16_20-04-30_scan_64-64_8fps.seq.ipynb  apply_point_selector_DE16_20-04-30_scan_64-64_8fps.seq.ipynb  appveyor.yml  architecture.html  authorship.html  azure-pipelines-data.yml  azure-pipelines.yml  changelog.html  citing.html  client.py  codecov.yml  concepts.html  conftest.py  contributing.html  contributors.json  dask.html  data_requirements.txt  debugging.html  dist_tests.html  (+33 more)
.doctrees/: acknowledgments.doctree  api.doctree  applications.doctree  architecture.doctree  authorship.doctree  changelog.doctree  citing.doctree  concepts.doctree  contributing.doctree  dask.doctree  debugging.doctree  dist_tests.doctree  environment.pickle  formats.doctree  gsoc.doctree  hyperspy-integration.doctree  index.doctree  install.doctree  packages.doctree  performance.doctree  releasing.doctree  sample_datasets.doctree  tips.doctree  udf.doctree  usage.doctree  why_python.doctree
.doctrees/app/: amorphous.doctree  binning.doctree  holography.doctree  pcmclustering.doctree  phasechange.doctree  phasecontrast.doctree  processing.doctree  radialfourier.doctree  strain.doctree
.doctrees/deployment/: clustercontainer.doctree  jupyter.doctree
.doctrees/dev/: executors.doctree  how-io-works.doctree  setup.doctree
.doctrees/reference/: api.doctree  application.doctree  caching.doctree  cluster-ds.doctree  corrections.doctree  dask.doctree  dataset.doctree  index.doctree  internals.doctree  io_backends.doctree  masks.doctree  progress.doctree  sparse.doctree  udf.doctree  viz.doctree
.doctrees/udf/: advanced.doctree  async.doctree  basic.doctree  introduction.doctree  profiling.doctree
.github/: PULL_REQUEST_TEMPLATE  dependabot.yml
.github/workflows/: cb.yml  ci.yml  gms.yml  thorough.yml  trigger-pages-rebuild.yml
.mypy_cache/3.6/: _ast.data.json  _ast.meta.json  _csv.data.json  _csv.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  _types.data.json  _types.meta.json  _warnings.data.json  _warnings.meta.json  abc.data.json  abc.meta.json  array.data.json  array.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  colorsys.data.json  colorsys.meta.json  configparser.data.json  configparser.meta.json  copy.data.json  (+71 more)
_modules/: index.html
_sources/: acknowledgments.rst.txt  applications.rst.txt  architecture.rst.txt  changelog.rst.txt  citing.rst.txt  concepts.rst.txt  contributing.rst.txt  dask.rst.txt  debugging.rst.txt  formats.rst.txt  index.rst.txt  releasing.rst.txt  sample_datasets.rst.txt  tips.rst.txt  usage.rst.txt  why_python.rst.txt
_static/: documentation_options.js
app/: amorphous.html  binning.html  holography.html  pcmclustering.html  phasechange.html  phasecontrast.html  processing.html  radialfourier.html  radialfourier.ipynb  strain.html
benchmarks/: test_smoke.py
client/: .eslintrc.js  index.html  package-lock.json  package.json  react-window.d.ts  tsconfig.json  tslint.json  vite.config.ts
data/: .placeholder
deployment/: clustercontainer.html  jupyter.html
dev/: executors.html  how-io-works.html  setup.html
docs/: Makefile  make.bat
examples/: .ipynb  Introduction to UDFs.ipynb  airy.ipynb  async.ipynb  basic.py  binning.ipynb  center_of_mass.ipynb  dask_array.py  digital-micrograph-async.py  digital-micrograph-basic.py  digital-micrograph-cluster.py  digital-micrograph-inline.py  digital-micrograph-liveplot.py  digital-micrograph-local.py  digital-micrograph-threads.py  fullframe_matching.ipynb  gridfitting.ipynb  hyperspy-integration.ipynb  hyperspy_example.ipynb  live-plotting.ipynb  multicore_scalability.ipynb  pca.ipynb  pcmclustering.ipynb  peak_selector.ipynb  radialfourier.ipynb  simple libertem API.ipynb  simple libertem API.py  sparse.ipynb  sparse_udf.ipynb  strainmap-SiGe.ipynb  strainmap-poly.ipynb  strainmap.ipynb  strainmap_affine.ipynb
fileformat/: README  STEM application definition hierarchy.txt  basic pixelated STEM.txt  draft NeXus tree.txt  generate_nexus_test_file.py  load_nexus_test_file.py
packaging/: README.html  contributors.json  creators.json  libertem.appdata.xml  zenodo-upload.json
prototypes/: create-raw-version.ipynb  live_plotting_multichannel.ipynb  set-threadcount.ipynb  sparseds.ipynb  validate-k2is.ipynb
reference/: api.html  application.html  caching.html  cluster-ds.html  corrections.html  dask.html  dataset.html  index.html  internals.html  io_backends.html  masks.html  progress.html  sparse.html  udf.html  viz.html
scripts/: build-authors-contributors  bump_version  cli-help  codecov.sh  creatorlist.ipynb  deploy_docs  licensecheck.py  readme_to_html.py  release  releasetests.ps1  requirements.txt  run_mypy.py  run_mypy.sh  zenodo_upload
tests/: aio_utils.py  conftest.py  test_analysis_base.py  test_analysis_clust.py  test_analysis_com.py  test_analysis_disk.py  test_analysis_masks.py  test_analysis_radialfourier.py  test_analysis_raw.py  test_analysis_rawfft.py  test_analysis_shapes.py  test_analysis_sum.py  test_analysis_sumfft.py  test_center_of_mass.py  test_context.py  test_executor_dask.py  test_fileowner.py  test_fs.py  test_fullmatch.py  test_gridmatching.py  test_ipython.py  test_job_deprecation.py  test_job_masks.py  test_job_raw.py  test_job_sum.py  test_karina.py  test_local_cluster.py  test_mask_container.py  test_masks.py  test_shape.py  test_slice.py  test_smoke.py  test_tmp_numbastuff.py  test_utils.py  test_viz.py  test_win_tweaks.py  utils.py
tracing/: docker-compose.yml  otel-collector-config.yaml
udf/: advanced.html  async.html  basic.html  introduction.html  introduction.ipynb  liveplotting.html  profiling.html
(+2420 files in other folders)
