[bumpversion]
current_version = 0.1.0.dev0
commit = True
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<rc_prefix>rc)(?P<rc>\d+))?(\.(?P<release>[a-z]+)(?P<dev>\d+))?
serialize = 
	{major}.{minor}.{patch}.{rc_prefix}{rc}
	{major}.{minor}.{patch}.{rc_prefix}{rc}.{release}{dev}
	{major}.{minor}.{patch}.{release}{dev}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = dev
values = 
	dev
#	gamma

[bumpversion:part:dev]

[bumpversion:part:rc]

[bumpversion:part:rc_prefix]
optional_value = rc
values = 
	rc

[bumpversion:file:src/libertem/__init__.py]

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
max-line-length = 100
ignore = E24,E121,E123,E126,E128,E133,E226,E241,E242,E704,W503
exclude = .git,__pycache__,.tox,build,dist,node_modules,TOXENV

[coverage:run]
branch = True
concurrency = 
	thread
	multiprocessing

[coverage:report]
exclude_lines = 
	pragma: no cover
	
	def __repr__
	if self\.debug
	
	raise AssertionError
	raise NotImplementedError
	
	if 0:
	if False:
	if __name__ == .__main__.:

[tool:pytest]
norecursedirs = .git .tox *.egg-info build node_modules TOXENV benchmarks prototypes

