[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
max-line-length = 100
ignore = E24,E121,E123,E126,E128,E133,E226,E241,E242,E704,W503
exclude = .git,__pycache__,.tox,build,dist,node_modules,TOXENV

[coverage:run]
branch = True
include = src/
concurrency =
    thread
    multiprocessing

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if False:
    if __name__ == .__main__.:

[tool:pytest]
norecursedirs = .git .tox *.egg-info build node_modules TOXENV benchmarks prototypes
addopts = --strict -m "not slow and not dist and not flaky"
markers =
    slow: mark a test as slow, i.e. takes a couple of seconds to run
    dist: tests that exercise the distributed parts of libertem
    functional: mark a test as functional, testing the whole libertem stack
    with_numba: mark tests that exercise a numba function so we can re-run for coverage
    flaky: mark tests that fail sporadically for unknown reasons so that they can be excluded from release builds
log_level=INFO
log_format = %(asctime)s %(levelname)s %(message)s
log_date_format = %Y-%m-%d %H:%M:%S
