[metadata]
license_file = LICENSE

[flake8]
max-line-length = 100
ignore = E24,E121,E123,E126,E128,E133,E226,E241,E242,E704,W503
exclude = .git,__pycache__,.tox,build,dist,node_modules,TOXENV

[coverage:run]
branch = True
include = src/
concurrency =
    thread
    multiprocessing

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if False:
    if __name__ == .__main__.:

# note: pytest config moved to pytest.ini beause of https://github.com/pypa/pip/issues/5182 and https://github.com/pytest-dev/pytest/issues/3062
